crates/agent/src/publications/linked_materializations/snapshots/agent__publications__linked_materializations__test__capture_only_published.snap
---
source: crates/agent/src/publications/linked_materializations/test.rs
expression: results
---
[
    Record {
        catalog_name: "acmeCo/matA/partial",
        spec_type: Some(
            Materialization,
        ),
        spec: Some(
            Object {
                "bindings": Array [
                    Object {
                        "fields": Object {
                            "recommended": Bool(true),
                        },
                        "resource": Object {
                            "targetThingy": String("cee_one"),
                        },
                        "source": String("acmeCo/captureA/c1"),
                    },
                    Object {
                        "fields": Object {
                            "recommended": Bool(true),
                        },
                        "resource": Object {
                            "targetThingy": String("cee_two"),
                        },
                        "source": String("acmeCo/captureA/c2"),
                    },
                    Object {
                        "fields": Object {
                            "recommended": Bool(true),
                        },
                        "resource": Object {
                            "targetThingy": String("cee_ninty_nine"),
                        },
                        "source": String("acmeCo/captureA/c99"),
                    },
                    Object {
                        "fields": Object {
                            "recommended": Bool(true),
                        },
                        "resource": Object {
                            "targetThingy": String("c3"),
                        },
                        "source": String("acmeCo/captureA/c3"),
                    },
                    Object {
                        "fields": Object {
                            "recommended": Bool(true),
                        },
                        "resource": Object {
                            "targetThingy": String("c4"),
                        },
                        "source": String("acmeCo/captureA/c4"),
                    },
                ],
                "endpoint": Object {
                    "connector": Object {
                        "config": Object {},
                        "image": String("matImage:v1"),
                    },
                },
                "sourceCapture": String("acmeCo/captureA/source-happy"),
            },
        ),
    },
    Record {
        catalog_name: "acmeCo/matA/starting-empty",
        spec_type: Some(
            Materialization,
        ),
        spec: Some(
            Object {
                "bindings": Array [
                    Object {
                        "fields": Object {
                            "recommended": Bool(true),
                        },
                        "resource": Object {
                            "targetThingy": String("c1"),
                        },
                        "source": String("acmeCo/captureA/c1"),
                    },
                    Object {
                        "fields": Object {
                            "recommended": Bool(true),
                        },
                        "resource": Object {
                            "targetThingy": String("c3"),
                        },
                        "source": String("acmeCo/captureA/c3"),
                    },
                    Object {
                        "fields": Object {
                            "recommended": Bool(true),
                        },
                        "resource": Object {
                            "targetThingy": String("c4"),
                        },
                        "source": String("acmeCo/captureA/c4"),
                    },
                ],
                "endpoint": Object {
                    "connector": Object {
                        "config": Object {},
                        "image": String("matImage:v1"),
                    },
                },
                "sourceCapture": String("acmeCo/captureA/source-happy"),
            },
        ),
    },
]
