crates/agent/src/publications/linked_materializations/snapshots/agent__publications__linked_materializations__test__empty_capture_bindings.snap
---
source: crates/agent/src/publications/linked_materializations/test.rs
expression: results
---
[]
